--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-switch": "^1.0.3",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
     "@types/react-slick": "^0.23.10",
     "autoprefixer": "^10.4.15",
     "axios": "^1.5.1",
+    "chart.js": "^4.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.274.0",
     "postcss": "^8.4.29",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-lazy-load-image-component": "^1.6.0",
